objects/GF_Logger__c/GF_Logger__c.object-meta.xml
<CustomObject>
    <label>GF Logger</label>
    <nameField>
        <displayFormat>GFL-{000000000}</displayFormat>
        <label>Entry No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GF Logger</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>