objects/GF_Logger__c/fields/Message10__c.field-meta.xml
<CustomField>
    <fullName>Message10__c</fullName>
    <label>Message10</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>