objects/GF_Logger__c/fields/Message2__c.field-meta.xml
<CustomField>
    <fullName>Message2__c</fullName>
    <label>Message2</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>