objects/GF_Logger__c/fields/Message3__c.field-meta.xml
<CustomField>
    <fullName>Message3__c</fullName>
    <label>Message3</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>