objects/GF_Logger__c/fields/SourceRecordId__c.field-meta.xml
<CustomField>
    <fullName>SourceRecordId__c</fullName>
    <label>SourceRecordId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>