objects/GF_Logger__c/fields/SourceRecordType__c.field-meta.xml
<CustomField>
    <fullName>SourceRecordType__c</fullName>
    <label>SourceRecordType</label>
    <length>50</length>
    <type>Text</type>
</CustomField>