objects/GF_Logger__c/fields/Stacktrace__c.field-meta.xml
<CustomField>
    <fullName>Stacktrace__c</fullName>
    <label>Stacktrace</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>