objects/GF_Logger__c/fields/TriggeredAt__c.field-meta.xml
<CustomField>
    <fullName>TriggeredAt__c</fullName>
    <label>TriggeredAt</label>
    <type>DateTime</type>
</CustomField>